<resources>
    <string name="app_name">Busca Est. de Saúde</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>

    <string name="ja_possuo_uma_conta">Já possuo uma conta</string>
    <string name="meu_primeiro_acesso">Fazer o meu cadastro</string>

    <string name="email_usuario">Email:</string>

    <string name="cep">CEP:</string>
    <string name="biografia">Biografia:</string>
    <string name="data_nascimento">Data de Nascimento:</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="nome_usuario">Nome de Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="enviar">Enviar</string>
    <string name="sexo">Sexo:</string>

    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="email_invalido">Email inválido</string>
    <string name="algo_deu_errado">Ops... algo deu errado</string>
    <string name="usuario_nao_cadastrado">Email ou senha incorretos</string>

    <string name="cadastro_concluido_com_sucesso">Cadastro concluído com sucesso!</string>
    <string name="usuario_autenticado_com_sucesso">Usuário autenticado com sucesso!</string>
    <string name="cadastro">Cadastro</string>
    <string name="confirmar">Confirmar</string>

    <string name="avaliacao">Avaliar</string>
    <string name="mapa">Mapa</string>

    <string name="pesquisar">Pesquisar</string>
    <string name="x_km">Distância de: %s km</string>

    <string name="avaliacao_enviada_com_sucesso">Avaliação enviada com sucesso!</string>
    <string name="avalie_o_estabelecimento">Avalie o estabelecimento:</string>
    <string name="google_maps_key">AIzaSyBC-cwvsgVDdDPg0kXXgrpHPgWY6pkAgno</string>


    <string name="nome_fantasia">Nome fantasia: %s</string>
    <string name="natureza">Natureza: %s</string>
    <string name="tipo_unidade">Tipo unidade: %s</string>
    <string name="esfera_administrativa">Esfera administrativa: %s</string>
    <string name="vinculo_sus">Vínculo com SUS: %s</string>
    <string name="retencao">Retenção: %s</string>
    <string name="fluxo_clientela">Fluxo clientela: %s</string>
    <string name="tem_atendimento_urgencia">Atendimento urgência: %s</string>
    <string name="tem_atendimento_ambulatorial">Atendimento ambulatorial: %s</string>
    <string name="tem_centro_cirurgico">Centro cirúrgico: %s</string>
    <string name="tem_obstetra">Obstetra: %s</string>
    <string name="tem_neonatal">Neonatal: %s</string>
    <string name="tem_dialise">Diálise: %s</string>
    <string name="descricao_completa">Descrição completa: %s</string>
    <string name="categoria_unidade">Categoria unidade: %s</string>
    <string name="logradouro">Logradouro: %s</string>
    <string name="numero">Número: %s</string>
    <string name="bairro">Bairro: %s</string>
    <string name="cidade">Cidade: %s</string>
    <string name="uf">UF: %s</string>
    <string name="cep_estabelecimento">CEP: %s</string>
    <string name="telefone">Telefone: %s</string>
    <string name="turno_atendimento">Turno de atendimento: %s</string>

    <string name="sem_avaliacoes">Ainda não foram feitas avaliações para esse estabelecimento.</string>
    <string name="x_pessoa_avaliou">Avaliado por %s usuário</string>
    <string name="x_pessoas_avaliaram">Avaliado por %s usuários</string>
    <string name="media_das_avaliacoes_x">Média das avaliações: %s</string>

    <string name="deixe_o_seu_comentario">Deixe o seu comentário:</string>
    <string name="preencha_os_dados_da_avaliacao">Preencha os dados da avaliação</string>

    <string name="ja_existe_avaliacao">Já  existe uma avaliação do usuário para o estabelecimento.</string>

    <string name="nao_ha_comentarios">Não há comentários para serem exibidos.</string>
    <string name="nao_ha_avaliacoes">Não há avaliações para serem exibidas.</string>
    <string name="nao_ha_resultados">Não há resultados para a busca.</string>

    <string name="busca_cidade">Cidade:</string>
    <string name="busca_uf">UF:</string>
    <string name="busca_categoria">Categoria:</string>
    <string name="busca_especialidade">Especialidade:</string>
    <string name="busca_por_cidades">Busca por cidades</string>
    <string name="busca_por_localizacao">Busca por localização</string>
    <string name="sair">Sair</string>
    <string name="minhas_avaliacoes">Minhas avaliações</string>
    <string name="cancelar">Cancelar</string>
    <string name="resultado_da_pesquisa">Resultado da pesquisa:</string>
    <string name="toque_no_mapa">Toque nos pontos indicados no mapa para obter detalhes sobre os estabelecimentos de saúde.</string>

    <string name="comentarios_de_outros_usuarios">Comentários sobre o estabelecimento:</string>

    <string name="deixe_a_sua_avaliacao">Deixe a sua avaliação</string>
    <string name="visualizar_avaliacoes">Visualizar avaliações</string>
    <string name="editar_avaliacao">Editar avaliação</string>
    <string name="buscando_avaliacoes">Buscando avaliações...</string>

    <string name="preparando_os_dados">Preparando os dados...</string>


    <string name="nao_foi_possivel_carregar_os_comentarios">Não foi possível carregar os comentários</string>

    <string name="sem_permissao_de_localizacao">Não foi possível obter as permissões necessárias para obter a localização.</string>

    <string name="creditos">Créditos</string>
    <string name="desafio_de_aplicativos">DESAFIO DE APLICATIVOS CÍVICOS: CONTROLE SOCIAL DIGITAL-2016</string>

    <string name="credito_imagem">Crédito imagem \"Busca por localização\":</string>

</resources>


