<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_18dp"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_avaliar"
            android:icon="@drawable/ic_chat_bubble_black_18dp"
            android:title="@string/avaliacao" />

        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_location_on_black_18dp"
            android:title="@string/mapa" />

        <item
            android:id="@+id/nav_pesquisa"
            android:icon="@drawable/ic_public_black_18dp"
            android:title="@string/pesquisar" />

        <item
            android:id="@+id/nav_informacoes"
            android:icon="@drawable/ic_cake_black_18dp"
            android:title="informacoes" />
    </group>

</menu>
