<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email_usuario"
                android:id="@+id/email_usuario" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="*" />

        </LinearLayout>
        <EditText
            android:id="@+id/edt_email_usuario"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"/>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/senha"
                android:id="@+id/senha" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="*" />

        </LinearLayout>


            <EditText
            android:id="@+id/edt_senha"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/nome_usuario"
                android:id="@+id/nome_usuario" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:text="*" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_nome_usuario"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nome_completo"
            android:id="@+id/nome_completo" />

        <EditText
            android:id="@+id/edt_nome_completo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sexo"
            android:id="@+id/sexo" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_default"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <Spinner
                android:id="@+id/spinner_sexo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/data_nascimento"
                    android:id="@+id/data_nascimento" />

                <EditText
                    android:id="@+id/edt_data_nascimento"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="2dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/cep"
                />

                <EditText
                    android:id="@+id/edt_cep"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/biografia"
            android:id="@+id/biografia" />

        <EditText
            android:id="@+id/edt_biografia"
            android:background="@drawable/border_default"
            android:layout_height="100dp"
            android:layout_width="match_parent"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/button_enviar"
            android:text="@string/enviar"
        />

    </LinearLayout>
</ScrollView>