<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/email_usuario" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="*" />

    </LinearLayout>
    <EditText
        android:id="@+id/edt_email_usuario_login"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/senha"
            android:id="@+id/senha" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="*" />

    </LinearLayout>

    <EditText
        android:id="@+id/edt_senha_login"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>


    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/button_enviar_login"
        android:text="@string/enviar" />


</LinearLayout>