<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Texto informartivo" />

    </android.support.v7.widget.CardView>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/busca_uf"
                android:text="@string/busca_uf"
                android:layout_width="wrap_content"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_default"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp">

                <Spinner android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:id="@+id/spinner_busca_uf"
                    android:gravity="center_vertical"
                    android:layout_gravity="top|center_vertical"
                    android:paddingBottom="9dp"
                    android:paddingTop="9dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/busca_cidade"
                android:text="@string/busca_cidade"
                android:layout_width="wrap_content"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_default"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp">

                <Spinner android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:id="@+id/spinner_busca_cidade"
                    android:gravity="center_vertical"
                    android:layout_gravity="top|center_vertical"
                    android:paddingBottom="9dp"
                    android:paddingTop="9dp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/busca_categoria"
        android:text="@string/busca_categoria"
        android:layout_width="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_default"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp">

        <Spinner android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/spinner_busca_categoria"
            android:gravity="center_vertical"
            android:layout_gravity="top|center_vertical"
            android:paddingBottom="9dp"
            android:paddingTop="9dp" />

    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/busca_especialidade"
        android:text="@string/busca_especialidade"
        android:layout_width="wrap_content"
        android:visibility="gone" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_default"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <Spinner android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/spinner_busca_especialiadade"
            android:gravity="center_vertical"
            android:layout_gravity="top|center_vertical"
            android:paddingBottom="9dp"
            android:paddingTop="9dp" />

    </LinearLayout>

    <Button android:text="@string/pesquisar"
        android:id="@+id/button_busca_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>